--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 
+@layer base {
+  h1, h2, h3, h4, h5 {
+    font-family: Space Mono, system-ui, sans-serif;
+  }
+  p {
+    font-family: Lexend Deca, system-ui, sans-serif;
+  }
 
+}
 
 .menu-card {
   @apply flex flex-col justify-center items-center bg-white h-screen font-mono py-10;
